--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,6 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:4.0.0'
     androidTestImplementation 'org.mockito:mockito-android:4.0.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
 }
